test/Common/LinkerScriptParsing/Errors/Sections/OutputSectionPrologue/OutSectTypeAndPermissions/Inputs/script2.t
SECTIONS {
  FOO 0x1000 (PROGBITS, WX) { *(*foo*) }
}